--- a/HASH.ProductsList/client/css/style.css
+++ b/HASH.ProductsList/client/css/style.css
@@ -10,12 +10,12 @@ body {
     background-color: #f5f5f5;
 }
 
-.panel{
-    margin: 1px 15px 1px 15px;
-}
-
 .load {
     text-align: center;
     font-size: 15px;
     font-weight: bold;
+  }
+
+.title{     
+    padding: 15px 1px 1px 15px;
   }
